# fishbowl

./: .env.agentfence-test  AGENTS.md  AgentFence.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MEMORY.md  Makefile  README.md  install.sh
.github/workflows/: release.yml
container/: Collector.Dockerfile  Dockerfile  audit_log.py  bash_env.sh  bashrc  entrypoint.sh  file_watcher.py  network_watcher.py  registry_update.py  workspace_watcher.py
docs/: DESIGN_SPEC.md  adding-an-agent.md  agent-detection.md  credential-scanning.md
scripts/: demo.sh  fake-malicious-skill.py  test-audit.sh  test-discovery.sh  test-file-access.sh  test-launch.sh  test-malicious-skill.sh  test-network.sh  test-workspace.sh
src/: agent_runtime.rs  audit.rs  cli.rs  config.rs  container.rs  discovery.rs  ebpf.rs  main.rs  monitor.rs
